# axum-backend

./: Cargo.toml  README.md
migrations/: 20241110162907_users.down.sql  20241110162907_users.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handler/: auth.rs  users.rs
src/mail/: mails.rs  mod.rs  sender.rs
src/mail/templates/: Welcome-email.html
src/utils/: password.rs  token.rs
