[package]
name = "axum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
time = "0.3.20"
tower-http = { version = "0.5.2", features = ["cors","trace"] }
tracing-subscriber = { version = "0.3.18"}
jsonwebtoken = "9.2.0"
async-trait = "0.1.72"
argon2 = "0.5.3"
lettre = "0.11.10"
